--- a/Owlendar/package.json
+++ b/Owlendar/package.json
@@ -5,10 +5,8 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "angular-ecmascript": "0.0.3",
+    "angular": "^1.5.8",
     "angular-meteor": "^1.3.11",
-    "angular-ui-router": "^1.0.0-beta.3",
-    "ionic-scripts": "^1.3.2",
     "meteor-node-stubs": "~0.2.0"
   }
 }
