--- a/Owlendar/package.json
+++ b/Owlendar/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-meteor": "^1.3.11",
+    "angular-sanitize": "^1.5.8",
+    "ionic-sdk": "^1.2.4",
     "meteor-node-stubs": "~0.2.0"
   }
 }
